# godot-cef

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  test.yml
addons/godot_cef/: godot_cef.gdextension  godot_cef.gdextension.uid
addons/godot_cef/icons/: webview.png.import
benches/: Cargo.toml
benches/benches/: software_rendering.rs
cef_app/: Cargo.toml
cef_app/src/: lib.rs  loader.rs
crates/cef_app/: Cargo.toml
crates/cef_app/src/: ime_helper.js  lib.rs  render_process.rs  v8_handlers.rs
crates/gdcef/: Cargo.toml
crates/gdcef/src/: browser.rs  cef_init.rs  cursor.rs  drag.rs  error.rs  input.rs  lib.rs  queue_processing.rs  render.rs  settings.rs  utils.rs  webrender.rs
crates/gdcef/src/accelerated_osr/: macos.rs  mod.rs
crates/gdcef/src/accelerated_osr/linux/: mod.rs  vulkan.rs
crates/gdcef/src/accelerated_osr/windows/: d3d12.rs  mod.rs  vulkan.rs
crates/gdcef/src/cef_texture/: browser_lifecycle.rs  ime.rs  mod.rs  rendering.rs  signals.rs
crates/gdcef/src/godot_protocol/: handler.rs  mime.rs  mod.rs  multipart.rs  range.rs
crates/gdcef/src/input/: keycode.rs
crates/gdcef/src/vulkan_hook/: linux.rs  mod.rs  windows.rs
crates/gdcef_helper/: Cargo.toml
crates/gdcef_helper/src/: main.rs  utils.rs
crates/software_render/: Cargo.toml
crates/software_render/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/api/: audio-capture.md  downloads.md  gpu-device-pinning.md  index.md  methods.md  properties.md  signals.md  vulkan-support.md
gdcef/: Cargo.toml
gdcef/src/: accelerated_osr.rs  browser.rs  cef_init.rs  error.rs  input.rs  lib.rs  render.rs  res_protocol.rs  texture.rs  utils.rs  webrender.rs
gdcef/src/accelerated_osr/: linux.rs  macos.rs  mod.rs  windows.rs
gdcef/src/accelerated_osr/linux/: mod.rs  vulkan.rs
gdcef/src/accelerated_osr/windows/: d3d12.rs  mod.rs  vulkan.rs
gdcef/src/cef_texture/: rendering.rs
gdcef/src/vulkan_hook/: mod.rs
gdcef_helper/: Cargo.toml
gdcef_helper/src/: main.rs  utils.rs  vulkan_select.rs
xtask/: Cargo.toml
xtask/src/: bundle_app.rs  bundle_common.rs  bundle_framework.rs  bundle_linux.rs  bundle_windows.rs  main.rs  pack.rs
