[package]
name = "gdcef"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gdcef"
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { workspace = true }
cef = { workspace = true }
cef-dll-sys = { workspace = true }
process_path = { workspace = true }
winit = { workspace = true }
cef_app = { path = "../cef_app" }
wide = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libloading = { workspace = true }
objc2 = { workspace = true }
objc2-metal = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-sys = { workspace = true }
