[package]
name = "gdcef_helper"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gdcef_helper"

[dependencies]
cef = { workspace = true }
cef-dll-sys = { workspace = true }
process_path = { workspace = true }
cef_app = { path = "../cef_app" }

[target.'cfg(target_os = "macos")'.dependencies]
libloading = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }
windows = { workspace = true }
